@@ -1,3 +1,12 @@
+2020-04-30  Keith Marshall  <keith@users.osdn.me>
+
+	Publish MinGW.org WSL-5.3.1 package set.
+
+	* mingw32/mingw32-runtime.xml (mingwrt-5.3.1-dev, mingwrt-5.3.1-dll)
+	(mingwrt-5.3.1-lic, mingwrt-5.3.1-man, libmingwex-5.3.1-dll-2)
+	(libmingwex-5.3.1-dev, w32api-5.3.1-dev): Add references.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2020-03-17  Keith Marshall  <keith@users.osdn.me>
 
 	Correct catalogue reference for mingw-get
